Version 4.1-5

 o Adding the use of the insight package to get formulas.
 
 o Added Effect.glmmPQL() for fitting generalized linear mixed models using the glmmPQL() function in the MASS package for penalized quasi-likelihood estimation.
 
 o Don't ignore lines lty sub-argument to plot.effpoly() (fixing a bug reported by Laura Adamovicz).
 
 o Minor changes to predictor effects gallery vignette.

Version 4.1-4

 o Change class(x) == "y" to inherits(x, "y") in code.

Version 4.1-3

 o Handle xlevels=n argument correctly in Effect() (fixing bug reported by Gerrit Eichner).
 
 o Add col argument to effectsTheme(), mostly to accommodate colorblind-friendly palette (suggestion of Sercan Kahveci).

Version 4.1-2

 o Effect methods for clm, clm2, and clmm models were not correctly passing the estimated theshholds to polr for computing effects (error reported by Stefan Th. Gries).  
 
 o Updated "Defining Effects Methods ..." vignette to reflect revisions to Effect.clm, Effect.clm2 and Effect.clmm.
 
 o Make sure that Effect() and plot() methods work correctly with character and logical predictors (following bug report by Julian Gaviria Lopez).

Version 4.1-1
 
 o Accommodate character and logical predictors.
 
 o Make sure that lty argument to plot() is not ignored.
 
 o Change behavior of default levels argument to predictorEffect.default() and predictorEffects.default() when residuals=TRUE to match that of Effect.lm().
 
 o Fix to Effect.default() to make fake glm fit more robust and fixed bug in .set.given.equal() in tests for model class.

Version 4.1-0

 o Fixed a bug in Effect.gls to ignore the 'weights' argument on the call to gls.
 
 o Added predictor effects graphics gallery vignette.
 
 o predictorEffect() and predictorEffects() have new xlevels and focal.levels arguments.
