@@ -6,6 +6,8 @@ Version 4.1-5
  
  o Don't ignore lines lty sub-argument to plot.effpoly() (fixing a bug reported by Laura Adamovicz).
  
+ o Added reversion tests for classes of model objects supported.
+ 
  o Minor changes to predictor effects gallery vignette.
 
 Version 4.1-4
